<resources>
    <string name="app_name">Calculator</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="text_plus">+</string>
    <string name="text_minus">-</string>
    <string name="text_multiply">x</string>
    <string name="text_equals">=</string>
    <string name="text_delete">AC</string>
</resources>