<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:text="@string/text_delete"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="394dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:text="@string/number_nine"
        tools:layout_editor_absoluteX="208dp"
        tools:layout_editor_absoluteY="442dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:text="@string/number_six"
        tools:layout_editor_absoluteX="208dp"
        tools:layout_editor_absoluteY="490dp" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/text_plus"
        tools:layout_editor_absoluteX="296dp"
        tools:layout_editor_absoluteY="538dp" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/text_multiply"
        tools:layout_editor_absoluteX="296dp"
        tools:layout_editor_absoluteY="442dp" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/text_minus"
        tools:layout_editor_absoluteX="296dp"
        tools:layout_editor_absoluteY="490dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:text="@string/number_eight"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="442dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:text="@string/number_two"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="538dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:text="@string/number_three"
        tools:layout_editor_absoluteX="208dp"
        tools:layout_editor_absoluteY="538dp" />

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:text="@string/number_zero"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="586dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:text="@string/number_five"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="490dp" />

    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/text_equals"
        tools:layout_editor_absoluteX="296dp"
        tools:layout_editor_absoluteY="586dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:text="@string/number_four"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="490dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:text="@string/number_one"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="538dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:text="@string/number_seven"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="442dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="337dp"
        tools:layout_editor_absoluteY="270dp" />

</androidx.constraintlayout.widget.ConstraintLayout>